--- a/infrastructure/tsconfig.json
+++ b/infrastructure/tsconfig.json
@@ -21,5 +21,5 @@
     "outDir": "./dist",
     "rootDir": "./"
   },
-  "exclude": ["node_modules", "cdk.out"]
+  "exclude": ["node_modules", "cdk.out", "dist"]
 }
