--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "load-data": "node scripts/load-data.js"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.0.0",
-    "@aws-sdk/lib-dynamodb": "^3.0.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.0.0",
-    "@aws-sdk/client-ssm": "^3.0.0",
     "@aws-sdk/client-api-gateway": "^3.0.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.0.0",
+    "@aws-sdk/client-dynamodb": "^3.0.0",
+    "@aws-sdk/client-ssm": "^3.0.0",
+    "@aws-sdk/lib-dynamodb": "^3.0.0",
     "aws-cdk-lib": "^2.0.0",
     "constructs": "^10.0.0",
+    "cookie": "^0.5.0",
+    "jsonwebtoken": "^9.0.0",
+    "playwright": "^1.53.1",
     "source-map-support": "^0.5.21",
     "uuid": "^9.0.0",
-    "zod": "^3.22.0",
-    "jsonwebtoken": "^9.0.0",
-    "cookie": "^0.5.0"
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.0",
